# Smart-Plug

./: LICENSE  README.md
Arquivos principais android/: AndroidManifest.xml  Erase.java  ServerData.java  activity_main.xml  activity_schedule.xml
Plug_Eletrico/app/: build.gradle
Plug_Eletrico/app/src/main/: AndroidManifest.xml
Plug_Eletrico/app/src/main/res/: MainActivity.java
Plug_Eletrico/app/src/main/res/layout/: activity_main.xml
Plug_Eletrico/app/src/main/res/values/: strings.xml
Plug_Eletrico/gradle/wrapper/: gradle-wrapper.properties
Smart_Plug/app/: build.gradle
Smart_Plug/app/src/main/: AndroidManifest.xml
Smart_Plug/app/src/main/res/layout/: activity_main.xml
Smart_Plug/app/src/main/res/layout-v21/: activity_main.xml
Smart_Plug/app/src/main/res/values/: strings.xml
Smart_Plug/gradle/wrapper/: gradle-wrapper.properties
Smart_Plug_Server/: build.xml
Smart_Plug_Server/nbproject/: genfiles.properties  project.properties
Smart_Plug_Server/src/smart_plug_server/: ServerBoard.java
Smart_Plug_Test-Server/nbproject/: build-impl.xml  project.xml
Smart_Plug_Test-Server/src/smart_plug_server/: TCPServer.java
smart_plug/app/: build.gradle  proguard-rules.pro
smart_plug/app/src/main/: AndroidManifest.xml
smart_plug/app/src/main/res/layout/: activity_erase.xml
smart_plug/gradle/wrapper/: gradle-wrapper.properties
smart_plug_server/: CMakeLists.txt  change_mode.cpp  process_msg.cpp  schedule.cpp  server.cpp  turn_off.cpp  turn_on.cpp
smart_plug_server/include/: change_mode.h  process_msg.h  schedule.h
(+10 files in other folders)
